[metadata]
name = network_health
version = 0.0.1
author = Calvin Atewamba
author_email = atewamba@gmail.com
description = Compute organizational network health
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gainx.atlassian.net/wiki/spaces/RES/pages/136052792/Network+Health
project_urls = 
    Bug Tracker = https://bitbucket.org/gainx/generalresearch/src/master/network_health/
license = BSD
license_file = LICENSE.txt
platforms = Linux, OS-X, Windows
keywords = network health, bayesian network, shapley values, tree boosting
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
packages = 
    find:
python_requires = >=3.7
install_requires =
    hyperopt>=0.2.7
    shap>=0.40.0
    numpy>=1.21.5
    scikit-learn>=1.0.2
    ipython>=7.0
    numpy>=1.14.2
    sciPy>=1.1
    pandas>=0.23.4
    Matplotlib>=3.0.2
    Seaborn>=0.9.0
    ArviZ>=0.3.1
    PyMC3>=3.6
    graphviz>=0.20.1
    termcolor>=1.1.0
    hpsklearn>=0.1.0

zip_safe = False



